--- a/templates/base.html
+++ b/templates/base.html
@@ -293,7 +293,7 @@
                         </a>
                     </li>
                     <!-- Only show backup options if not in demo mode -->
-                    {% if 'demo_mode' not in session %}
+                    <!--{% if 'demo_mode' not in session %}
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="backupDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             <i class="bi bi-cloud-arrow-down me-1"></i>Backup
@@ -322,7 +322,7 @@
                             </li>
                         </ul>
                     </li>
-                    {% endif %}
+                    {% endif %}-->
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('demo_page') }}">
