--- a/templates/budget_categories.html
+++ b/templates/budget_categories.html
@@ -143,6 +143,7 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal"></button>
             </div>
             <form method="POST" id="categoryForm">
+                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}" />
                 <div class="modal-body">
                     <input type="hidden" id="categoryId" name="category_id">
 
