--- a/templates/wiki.html
+++ b/templates/wiki.html
@@ -13,7 +13,7 @@
                     <p class="lead mb-0">Complete documentation and developer guide</p>
                 </div>
                 <div class="col-md-4 text-end">
-                    <span class="badge bg-light text-primary fs-6">v2.2.1</span>
+                    <span class="badge bg-light text-primary fs-6">{{ wiki_version }}</span>
                 </div>
             </div>
         </div>
